# cookie-analyzer

./: .bumpversion.cfg  .codecov.yml  .coverage  .flake8  .gitignore  .isort.cfg  .pylintrc  CONTRIBUTING.md  Dockerfile  Makefile  README.md  config.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  start.py
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml  dependencies.yml  docker.yml  lint.yml  python-publish.yml  security.yml  version-bump.yml
cookie_analyzer/: __init__.py  cookie_handler.py  core.py  crawler.py  database.py  interface.py  services.py  utils.py
cookie_analyzer/core/: __init__.py  analyzer.py
cookie_analyzer/crawler/: __init__.py  async_crawler.py  base.py  consent_manager.py  cookie_crawler.py  selenium_crawler.py
cookie_analyzer/database/: __init__.py  handler.py  updater.py
cookie_analyzer/handlers/: __init__.py  cookie_classifier.py  cookie_handler.py
cookie_analyzer/interface/: __init__.py  cli.py  wrapper.py
cookie_analyzer/services/: __init__.py  crawler_factory.py  initializer.py  provider.py  service_interfaces.py
cookie_analyzer/utils/: __init__.py  config.py  export.py  logging.py  url.py
tests/: conftest.py  test_cookie_classifier.py  test_cookie_collectors.py  test_cookie_handler.py  test_core.py  test_core_analyzer.py  test_database.py  test_services.py  test_utils_url.py  test_wrapper.py
