[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cookie-analyzer"
version = "0.1.0"
description = "Ein Tool zur Analyse von Cookies auf Websites."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache License 2.0"}
authors = [
    { name = "Ihr Name", email = "ihre.email@example.com" }
]
dependencies = [
    "requests",
    "playwright",
    "tldextract",
    "beautifulsoup4"
]
